fix bug with scroll on mobile chrome

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -92,6 +92,7 @@ body {
     grid-template-columns: 1fr;
     align-items: center;
     overflow-x: auto;
+    touch-action: none;
 
     .city {
       display: grid;
